resources/stylesheets/component/common/main.less
html {
	font-size: initial;
}

body.mediawiki,
body.mediawiki.x-body {
	background: @bs-body-background;
	font-family: @wrapper-font-family;
	font-weight: @wrapper-font-weight;
	font-size: 0.875rem;

	.wrapper {
		font-size: 0.875rem;
		box-sizing: border-box;
		height: 100%;

		.content-wrapper {
			padding-left: 0.3125rem;
			padding-right: 0.3125rem;
			/*
			* This must be a `padding`, not a `margin`. The `margin` messes with some offset-calculations in
			* JavaScripts. Especially ExtJS trees and tooltips.
			*/
			padding-top: @menu-top-height + @banner-top-height; //TODO
		}

		.bs-content.container {
			padding-top: 0;
			height: 100%;
			max-width: @bs-content-width;
			z-index: 8;
			background: @bs-content-background;
			font-size: 0.875rem;

			#siteNotice {
				.alert {
					margin-top: 0.5rem;
					margin-bottom: 0;
					border: none;
					border-radius: 0;
					color: #404040;
				}
				.alert-success {
					background-color: @bs-color-success;
				}
				.alert-danger {
					background-color: @bs-color-error;
				}
				.alert-warning {
					background-color: @bs-color-warning;
				}
				.alert-info {
					background-color: @bs-color-info;
				}
			}
		}

		a:focus {
			background-color: transparent;
		}
	}

	.dropdown {
		cursor: pointer;
	}
}

